<resources>
    <string name="app_name">零活</string>
    <string name="splashone">随时随地地找兼职</string>
    <string name="splashtwo">让工作来找你</string>
    <string name="splashthree">立即体验</string>
    <string name="loading">加载中</string>
    <string name="first_page">首页</string>
    <string name="issue">发布</string>
    <string name="message">消息</string>
    <string name="message_centre">消息中心</string>
    <string name="people">实名认证</string>
    <string name="frim">企业认证</string>
    <string name="me">我的</string>
    <string name="name">姓名</string>
    <string name="six">性别</string>
    <string name="nickname">昵称</string>
    <string name="age">年龄</string>
    <string name="site">地址</string>
    <string name="user">用户名</string>
    <string name="password">密码</string>
    <string name="getcode">获取验证码</string>
    <string name="me_amend">完善个人资料</string>
    <string name="wallet">我的钱包</string>
    <string name="approve">发布认证</string>
    <string name="me_issus">我的发布</string>
    <string name="bind">账号绑定</string>
    <string name="register">注册账号</string>
    <string name="paycenter">支付中心</string>
    <string name="forget">忘记密码</string>
    <string name="code">验证码</string>
    <string name="phone">手机号</string>
    <string name="feedback">意见反馈</string>
    <string name="amend">完善信息</string>
    <string name="atonce">立即报名</string>
    <string name="atonce_appraise">立即评价</string>
    <string name="newjob">最新兼职信息</string>
    <string name="more">更多</string>
    <string name="contact">联系我们</string>
    <string name="warm_prompt_one">1.请填写有效手机号，您可通过手机号进行帐号登录。</string>
    <string name="warm_prompt_two">2.我们会对用户的所有资料进行严格保密。</string>
    <!--start支付宝-->
    <string name="demo_info_text">Warning: \n\nFor demonstration purpose, the assembling and signing of the request parameters are done on the client side.\nHowever, in practice, both assembling and signing MUST BE carried out on the server side.</string>
    <string name="pay_with_alipay">Pay with Alipay</string>
    <string name="pay_with_alipay_hk">Pay with AlipayHK</string>
    <string name="auth_with_alipay">Authenticate with Alipay</string>
    <string name="web_to_native">Call Alipay from Web Content</string>
    <string name="check_sdk_version">Alipay SDK Version</string>
    <string name="pay_success">Payment success:</string>
    <string name="auth_failed">Authentication failed:</string>
    <string name="permission_already_granted">Required permissions have already been granted to AlipaySDK</string>
    <string name="permission_rejected">Missing permissions. Please grant required permissions in system settings</string>
    <string name="permission_granted">Required permissions have been granted to AlipaySDK</string>
    <string name="error_missing_appid_rsa_private">Error: Missing \"APPID\" or \"RSA_PRIVATE\" in PayDemoActivity.</string>
    <string name="error_missing_hk_partner_seller_rsa_private">Error: Missing \"PARTNER\", \"SELLER\", or \"RSA_PRIVATE\\ in OrderUtils1_0_HK.</string>
    <string name="pay_result">Payment result:</string>
    <string name="error_auth_missing_partner_appid_rsa_private_target_id">Error: Missing \"PARTNER\", \"APP_ID\", \"RSA_PRIVATE\", or \"TARGET_ID\" in PayDemoActivity.</string>
    <string name="confirm">Confirm</string>
    <string name="pay_failed">Payment failed:</string>
    <string name="auth_success">Authentication success:</string>
    <string name="alipay_sdk_version_is">"Alipay SDK version: "</string>
    <string name="error_missing_h5_pay_url">Missing URL to load. Please configure in PayDemoActivity.h5Pay()</string>
    <string name="error">Error</string>
    <string name="pay_cross_border">Cross-border Pay with Alipay</string>
    <string name="error_missing_global_partner_seller_rsa_private">Error: Missing \"PARTNER\", \"SELLER\", or \"RSA_PRIVATE\\ in OrderUtils1_0_Global.</string>
    <string name="payment_inst_hk">Payer: HK</string>
    <string name="payment_inst_cn">Payer: CN</string>
    <string name="open_auth_scheme">Auth using Scheme</string>
    <!--end支付宝-->
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_dynamic_feature">Module Title</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="search_text">请输入您想做的工作</string>
</resources>
