<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/line" />

    <TextView
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0_5"
        android:layout_above="@id/bottom_view"
        android:background="@color/grey_second" />

    <com.sxxh.linghuo.customs.MyBottomView
        android:id="@+id/bottom_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:paddingTop="@dimen/dp_5"
        app:bottomNum="4"
        app:bottomTextSize="@dimen/sp_6"
        app:changeDrawable="true"
        app:changeTextColor="true"
        app:imageSelectedFirst="@mipmap/select_home"
        app:imageSelectedFourth="@mipmap/select_me"
        app:imageSelectedSecond="@mipmap/select_issus"
        app:imageSelectedThird="@mipmap/select_message"
        app:imageUnSelectedFirst="@mipmap/unselect_home"
        app:imageUnSelectedFourth="@mipmap/unselect_me"
        app:imageUnSelectedSecond="@mipmap/unselect_issus"
        app:imageUnSelectedThird="@mipmap/unselect_message"
        app:textFirst="@string/first_page"
        app:textFourth="@string/me"
        app:textSecond="@string/issue"
        app:textSelectedColor="@color/app_theme_color"
        app:textThird="@string/message"
        app:textUnSelectedColor="@color/grey_first" />

</RelativeLayout>