<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".login.BindActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/message_tbr"
        android:minHeight="?android:attr/actionBarSize"
        android:background="@color/app_theme_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/back"
                android:src="@drawable/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_centerInParent="true"
                android:text="@string/register"
                android:textStyle="bold"
                android:textSize="@dimen/sp_18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:orientation="vertical"
        android:padding="@dimen/dp_19"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_marginTop="@dimen/dp_20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/phone"
                android:textColor="@color/black_theme"
                android:textStyle="bold"
                android:textSize="@dimen/sp_18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/phone"
                android:layout_weight="1"
                android:hint="请输入手机号"
                android:paddingLeft="@dimen/dp_5"
                android:background="@null"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/getcord"
                android:text="@string/getcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <TextView
            android:background="@color/grey_second"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1" />
        <LinearLayout
            android:layout_marginTop="@dimen/dp_30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/code"
                android:textColor="@color/black_theme"
                android:textStyle="bold"
                android:textSize="@dimen/sp_18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/code"
                android:paddingLeft="@dimen/dp_5"
                android:layout_weight="1"
                android:hint="请输入短信验证码"
                android:background="@null"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <TextView
            android:background="@color/grey_second"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1" />
        <TextView
            android:gravity="center_horizontal"
            android:id="@+id/bt_login"
            android:text="立即绑定"
            android:textColor="@color/write"
            android:textSize="@dimen/sp_18"
            android:textStyle="bold"
            android:padding="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@drawable/blue_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_10"
            android:drawableLeft="@mipmap/reminder"
            android:drawablePadding="@dimen/dp_5"
            android:text="温馨提示："
            android:textColor="@color/blue_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/warm_prompt_one"
            android:layout_marginBottom="@dimen/dp_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/warm_prompt_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <RelativeLayout
            android:layout_marginTop="@dimen/dp_50"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/none"
                android:textSize="@dimen/sp_18"
                android:text="你还没有账号？"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/register"
                android:layout_toRightOf="@id/none"
                android:textSize="@dimen/sp_18"
                android:text="注册"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>