<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".me.MeFragment">

    <LinearLayout
        android:id="@+id/my_name"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="@dimen/dp_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.example.myapplication.view.RoundImage
            android:layout_weight="1"
            android:src="@drawable/leak_canary_icon"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_50" />
        <LinearLayout
            android:layout_weight="3"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <TextView
                android:layout_weight="1"
                android:text="reasdfasdfadsf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_weight="1"
                android:text="@string/first_page"
                android:background="@drawable/splash_round"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <TextView
            android:id="@+id/me_amend"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/amend"
            android:background="@drawable/yellow_round"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/grade"
        android:layout_below="@id/my_name"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <TextView
                android:layout_weight="1"
                android:text="0级"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_weight="1"
                android:text="兼职达人"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <TextView
                android:layout_weight="1"
                android:text="80%"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_weight="1"
                android:text="信用度"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <TextView
                android:layout_weight="1"
                android:text="628"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_weight="1"
                android:text="评论"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/situation"
        android:orientation="horizontal"
        android:layout_below="@id/grade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <ImageView
                android:src="@drawable/leak_canary_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="待录取"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <ImageView
                android:src="@drawable/leak_canary_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="工作中"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <ImageView
                android:src="@drawable/leak_canary_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="工资未结"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <ImageView
                android:src="@drawable/leak_canary_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="待评价"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/list"
        android:layout_below="@id/situation"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/wallet"
            android:padding="@dimen/dp_5"
            android:drawableLeft="@drawable/leak_canary_icon"
            android:drawableRight="@drawable/leak_canary_icon"
            android:gravity="center_vertical"
            android:text="@string/wallet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/approve"
            android:padding="@dimen/dp_5"
            android:drawableLeft="@drawable/leak_canary_icon"
            android:drawableRight="@drawable/leak_canary_icon"
            android:gravity="center_vertical"
            android:text="@string/approve"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/me_issus"
            android:padding="@dimen/dp_5"
            android:drawableLeft="@drawable/leak_canary_icon"
            android:drawableRight="@drawable/leak_canary_icon"
            android:gravity="center_vertical"
            android:text="@string/me_issus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/bind"
            android:padding="@dimen/dp_5"
            android:drawableLeft="@drawable/leak_canary_icon"
            android:drawableRight="@drawable/leak_canary_icon"
            android:gravity="center_vertical"
            android:text="@string/bind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/feedback"
            android:padding="@dimen/dp_5"
            android:drawableLeft="@drawable/leak_canary_icon"
            android:drawableRight="@drawable/leak_canary_icon"
            android:gravity="center_vertical"
            android:text="@string/feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</RelativeLayout>